// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys "cmfy/eye_color_any" 1`] = `
{
  "errors": [],
  "ignoreList": [],
  "listHasExists": [
    "cmfy/eye_color_classic",
    "cmfy/eye_color_stylized",
    "cmfy/eye_color_fantasy",
  ],
  "listHasExistsWildcards": [],
  "obj": {
    "cmfy": {
      "eye_color_any": [
        "__cmfy/eye_color_classic__",
        "__cmfy/eye_color_stylized__",
        "__cmfy/eye_color_fantasy__",
      ],
      "eye_color_classic": [
        1,
      ],
      "eye_color_fantasy": [
        3,
      ],
      "eye_color_stylized": [
        2,
      ],
    },
  },
}
`;

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys "cmfy/eye_color_any" 2`] = `
"cmfy:
  eye_color_classic:
    - 1
  eye_color_stylized:
    - 2
  eye_color_fantasy:
    - 3

  eye_color_any:
    - __cmfy/eye_color_classic__
    - __cmfy/eye_color_stylized__
    - __cmfy/eye_color_fantasy__
"
`;

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys cmfy/eye_color_any 1`] = `
{
  "errors": [],
  "ignoreList": [],
  "listHasExists": [
    "cmfy/eye_color_classic",
    "cmfy/eye_color_stylized",
    "cmfy/eye_color_fantasy",
  ],
  "listHasExistsWildcards": [],
  "obj": {
    "cmfy": {
      "eye_color_any": [
        "__cmfy/eye_color_classic__",
        "__cmfy/eye_color_stylized__",
        "__cmfy/eye_color_fantasy__",
      ],
      "eye_color_classic": [
        11,
      ],
      "eye_color_fantasy": [
        3,
      ],
      "eye_color_stylized": [
        2,
      ],
    },
  },
}
`;

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys cmfy/eye_color_any 2`] = `
"cmfy:
  eye_color_classic:
    - 11
  eye_color_stylized:
    - 2
  eye_color_fantasy:
    - 3

  eye_color_any:
    - __cmfy/eye_color_classic__
    - __cmfy/eye_color_stylized__
    - __cmfy/eye_color_fantasy__
"
`;

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys cmfy:eye_color_any 1`] = `
{
  "errors": [],
  "ignoreList": [],
  "listHasExists": [
    "cmfy/eye_color_classic",
    "cmfy/eye_color_stylized",
    "cmfy/eye_color_fantasy",
  ],
  "listHasExistsWildcards": [],
  "obj": {
    "cmfy": {
      "eye_color_any": [
        "__cmfy/eye_color_classic__",
        "__cmfy/eye_color_stylized__",
        "__cmfy/eye_color_fantasy__",
      ],
      "eye_color_classic": [
        1,
      ],
      "eye_color_fantasy": [
        3,
      ],
      "eye_color_stylized": [
        2,
      ],
    },
  },
}
`;

exports[`checkAllSelfLinkWildcardsExists forward slashes / in keys cmfy:eye_color_any 2`] = `
"cmfy:
  eye_color_fantasy:
    - 3
  eye_color_classic:
    - 1
  eye_color_stylized:
    - 2

  eye_color_any:
    - __cmfy/eye_color_classic__
    - __cmfy/eye_color_stylized__
    - __cmfy/eye_color_fantasy__
"
`;
